fix: change animation to transition on small item, other
change animation to keyframe on bigger object, change useTransition stage

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,22 +23,24 @@ html:has(.modal.open) {
 }
 
 body:has(.modal.open) > #root {
-  transition: transform 0.3s ease-in-out;
-  transform: scale(0.9);
+  transform: scale(0.95);
+  filter: blur(10px);
+  transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out;
 }
 
 #root, body:has(.modal.open.leaving) > #root {
-  transition: transform 0.3s ease-in-out;
   transform: unset;
+  filter: unset;
+  transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out;
 }
 
 .modal.trigger {
   opacity: 1;
-  transform: unset;
+  transform: scale(1);
   transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
-.modal.trigger.entered {
+.modal.trigger.idle {
   opacity: 0;
   transform: scale(2);
   transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
@@ -46,16 +48,17 @@ body:has(.modal.open) > #root {
 
 .modal.open>.overlay {
   background-color: rgba(0, 0, 0, 0.8);
-  animation: fade-in 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
 }
 
 .modal.open.entering>.overlay {
-  animation: fade-in 0.3s ease-in-out;
+  background-color: rgba(0, 0, 0, 0);
+  transition: background-color 0.3s ease-in-out;
 }
 
 .modal.open.leaving>.overlay {
-  animation: fade-in 0.3s ease-in-out;
-  animation-direction: reverse;
+  background-color: rgba(0, 0, 0, 0.8);
+  transition: background-color 0.3s ease-in-out;
 }
 
 .modal.open .content .video-wrapper {
@@ -66,6 +69,7 @@ body:has(.modal.open) > #root {
 .modal.open .content {  
   top: 40px;
   width: 850px;
+  animation-play-state: paused;
   animation: scale 0.3s ease-in-out;
 }
 
@@ -74,16 +78,14 @@ body:has(.modal.open) > #root {
 }
 
 .modal.open.leaving .content {
-  /* animation: scale-down 0.3s ease-in-out; */
-  animation-name: scale-down;
-  animation-duration: 0.3s;
-  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  animation: scale-down 0.3s ease-in-out;
+
 }
 
-/* .modal.open .backdrop {
+.modal.open .backdrop {
   -webkit-mask-image: linear-gradient(180deg, rgba(0,0,0,1) 60%, rgba(0,0,0,0.5) 85%, rgba(0,0,0,0) 100%);
   mask-image: linear-gradient(180deg, rgba(0,0,0,1) 60%, rgba(0,0,0,0.5) 85%, rgba(0,0,0,0) 100%);
-} */
+}
 
 @media screen and (min-width: 640px) {
   :root {
@@ -91,14 +93,6 @@ body:has(.modal.open) > #root {
   }
 }
 
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
 
 @keyframes scale {
   from {
